--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -9,7 +9,7 @@
                 <a href="https://quobix.com/vacuum" class="no-style">vacuum report</a>
             </div>
         </header>
-        <div class="generated">Generated: {{ timeGenerated .Generated }}</div>
+        <div class="generated"> {{- if not .DisableTimestamp -}}Generated: {{ timeGenerated .Generated }}{{- end -}}</div>
         <div class="mobile-warning">
             The mobile experience is still being developed. This may look/feel a bit odd for now.
         </div>
@@ -59,7 +59,7 @@
                                        totalRulesViolated="{{ len $ruleResults.RuleResults }}"
                                        ruleIcon="{{ ruleSeverityIcon .Rule.Severity }}" ruleId="{{ .Rule.Id }}"
                                        description="{{ .Rule.Description }}" numResults={{ .Seen }} {{ if .Truncated }}truncated=true{{end}}>
-                            {{- with .Results -}}
+                            {{- with sortResults .Results -}}
                             {{- range . }}
                             <category-rule-result category="{{ $currentCat }}" howToFix="{{ $howToFixRule }}" slot="results" message="{{ .Message }}" ruleId="{{ .Rule.Id }}" startLine='{{ .StartNode.Line }}' startCol='{{ .StartNode.Column }}' endLine='{{ .EndNode.Line }}' endCol='{{ .EndNode.Column }}' path="{{ .Path }}">
                                 {{- renderSource . $specString -}}
