--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -28,9 +28,9 @@
                 --page-width: 100vw;
                 --font-color: #e8e9ed;
                 --invert-font-color: #222225;
-                --secondary-color: #b685ff;
-                --secondary-color-lowalpha: rgba(182, 133, 255, 0.55);
-                --secondary-color-x-lowalpha: rgba(182, 133, 255, 0.2);
+                --secondary-color: #f83aff;
+                --secondary-color-lowalpha: rgba(248, 58, 255, 0.55);
+                --secondary-color-x-lowalpha: rgba(248, 58, 255, 0.2);
                 --tertiary-color: #a3abba;
                 --primary-color: #62c4ff;
                 --primary-color-lowalpha: rgba(98, 196, 255, 0.76);
@@ -57,7 +57,7 @@
                 --code-bg-color: rgb(28 33 40);
                 --input-style: solid;
                 --display-h1-decoration: none;
-                --bold-text: #e397fa;
+                --bold-text: #f83aff;
                 --terminal-green: #00FF00FF;
                 --hrcolor: #3d3d3d;
                 --code-border: #525252;
