use rule documentation url in html report

--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -55,13 +55,14 @@
                     {{- range . }}
                         {{- $currentCat := .Rule.RuleCategory.Id -}}
                         {{- $howToFixRule := .Rule.HowToFix -}}
+                        {{- $documentationUrlRule := .Rule.DocumentationURL -}}
                         <category-rule maxViolations="{{ $maxViolations }}"
                                        totalRulesViolated="{{ len $ruleResults.RuleResults }}"
                                        ruleIcon="{{ ruleSeverityIcon .Rule.Severity }}" ruleId="{{ .Rule.Id }}"
                                        description="{{ .Rule.Description }}" numResults={{ .Seen }} {{ if .Truncated }}truncated=true{{end}}>
                             {{- with sortResults .Results -}}
                             {{- range . }}
-                            <category-rule-result category="{{ $currentCat }}" howToFix="{{ $howToFixRule }}" slot="results" message="{{ .Message }}" ruleId="{{ .Rule.Id }}" startLine='{{ .StartNode.Line }}' startCol='{{ .StartNode.Column }}' endLine='{{ .EndNode.Line }}' endCol='{{ .EndNode.Column }}' path="{{ .Path }}">
+                            <category-rule-result category="{{ $currentCat }}" howToFix="{{ $howToFixRule }}" documentationUrl="{{ $documentationUrlRule }}" slot="results" message="{{ .Message }}" ruleId="{{ .Rule.Id }}" startLine='{{ .StartNode.Line }}' startCol='{{ .StartNode.Column }}' endLine='{{ .EndNode.Line }}' endCol='{{ .EndNode.Column }}' path="{{ .Path }}">
                                 {{- renderSource . $specString -}}
                             </category-rule-result>
                             {{- end -}}
